--- a/package.json
+++ b/package.json
@@ -1,39 +1,35 @@
 {
-    "name": "voucherify.js",
-    "version": "1.3.1",
-
-    "homepage": "http://www.voucherify.io",
-    "description": "Client-side SDK for Voucherify.",
-
-    "author": "rspective",
-    "license": "MIT",
-    "scripts": {
-        "build": "gulp build"
-    },
-
-    "repository": {
-        "type": "git",
-        "url": "https://github.com/rspective/voucherify-nodejs-sdk.git"
-    },
-    "bugs": {
-        "url": "https://github.com/rspective/voucherify-nodejs-sdk/issues",
-        "email": "dev@rspective.pl"
-    },
-
-    "keywords": [
-        "voucherify",
-        "vouchers",
-        "voucher",
-        "javascript",
-        "client-side",
-        "sdk",
-        "saas"
-    ],
-
-    "dependencies": {},
-    "devDependencies": {
-        "gulp": "~3.9.0",
-        "gulp-uglify": "~1.2.0",
-        "gulp-rename": "~1.2.2"
-    }
+  "name": "voucherify.js",
+  "version": "1.3.1",
+  "homepage": "http://www.voucherify.io",
+  "description": "Client-side SDK for Voucherify.",
+  "author": "rspective",
+  "license": "MIT",
+  "scripts": {
+    "build": "gulp build"
+  },
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/rspective/voucherify-nodejs-sdk.git"
+  },
+  "bugs": {
+    "url": "https://github.com/rspective/voucherify-nodejs-sdk/issues",
+    "email": "dev@rspective.pl"
+  },
+  "keywords": [
+    "voucherify",
+    "vouchers",
+    "voucher",
+    "javascript",
+    "client-side",
+    "sdk",
+    "saas"
+  ],
+  "devDependencies": {
+    "gulp": "~3.9.0",
+    "gulp-rename": "~1.2.2",
+    "gulp-sequence": "~0.4.5",
+    "gulp-uglify": "~1.2.0",
+    "gulp-uglifycss": "~1.0.6"
+  }
 }
