--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "gulp": "~3.9.0",
     "gulp-rename": "~1.2.2",
     "gulp-sequence": "~0.4.5",
+    "gulp-sourcemaps": "1.6.0",
     "gulp-uglify": "~1.2.0",
     "gulp-uglifycss": "~1.0.6"
   }
